--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header"></div>
-        <div class="sidebar"></div>
+        <div class="side-bar"></div>
         <div class="main-content"></div>
     </div>
 </body>
