Complete the sidebar layout and style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
 <body>
     <div class="container">
         <div class="header"></div>
-        <div class="side-bar"></div>
+        <div class="side-bar">
+            <div class="box-1">
+               
+                <img src="icons/view-dashboard.svg" alt="logo"><p>Dashboard</p>
+            </div>
+            <div class="box-2">
+                <p> <img src="icons/home.svg" alt="icon">Home</p>
+                <p> <img src="icons/profile.svg" alt="icon">Profile</p>
+                <p> <img src="icons/wallet.svg" alt="icon">Wallet</p>
+                <p> <img src="icons/message.svg" alt="icon">Message</p>
+                <p> <img src="icons/history.svg" alt="icon">History</p>
+                <p> <img src="icons/tasks.svg" alt="icon">Tasks</p>
+                <p> <img src="icons/communities.svg" alt="icon">Communities</p>
+            </div>
+            <div class="box-3">
+                <p> <img src="icons/settings.svg" alt="icon">Setting</p>
+                <p> <img src="icons/face-agent.svg" alt="icon">Support</p>
+                <p> <img src="icons/security.svg" alt="icon">Privacy</p>
+            </div>
+        </div>
         <div class="main-content"></div>
     </div>
 </body>
