Complete the header layout and design

--- a/index.html
+++ b/index.html
@@ -3,12 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="header"></div>
+        <div class="header">
+            <div class="row-1">
+                <div class="search">
+                    <label for="search-bar"><img src="icons/magnify.svg" alt="icon"></label>
+                    <input type="search" id="search-bar" name="search-bar" >
+                </div>
+                <div class="profile-information">
+                    <img src="icons/bell.svg" alt="notifications">
+                    <div class="circle-image"></div>
+                    <p>Morgan Oackley</p>
+                </div>
+                
+            </div>
+            <div class="row-2">
+                <div class="profile-information-2">
+                    <div class="circle-image">
+
+                    </div>
+                    <div class="hello">
+                        <p id="hi">Hi there,</p>
+                        <p>Morgan Oackley (@morgan)</p>
+                    </div>
+                </div>
+                <div class="buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+
+                </div>
+            </div>
+        </div>
         <div class="side-bar">
             <div class="box-1">
                
