Complete column-1 layout and style

--- a/index.html
+++ b/index.html
@@ -59,7 +59,95 @@
                 <p> <img src="icons/security.svg" alt="icon">Privacy</p>
             </div>
         </div>
-        <div class="main-content"></div>
+        <div class="main-content">
+            <div class="column-1">
+                <p>Your Projects</p>
+                <div class="your-projects">
+                    <div class="project">
+                        <h3>Ethereum Blockchain</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <div class="icons-container">
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" alt="star-plus">
+                                <img src="icons/eye-plus.svg" alt="eye-plus">
+                                <img src="icons/share.svg" alt="share">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="project">
+                        <h3>Blockchain Project</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <div class="icons-container">
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" alt="star-plus">
+                                <img src="icons/eye-plus.svg" alt="eye-plus">
+                                <img src="icons/share.svg" alt="share">
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="project">
+                        <h3>Cryptocurrency</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <div class="icons-container">
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" alt="star-plus">
+                                <img src="icons/eye-plus.svg" alt="eye-plus">
+                                <img src="icons/share.svg" alt="share">
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="project">
+                        <h3>Non Fungible Token(NFTs)</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <div class="icons-container">
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" alt="star-plus">
+                                <img src="icons/eye-plus.svg" alt="eye-plus">
+                                <img src="icons/share.svg" alt="share">
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="project">
+                        <h3>Crypto Platform</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <div class="icons-container">
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" alt="star-plus">
+                                <img src="icons/eye-plus.svg" alt="eye-plus">
+                                <img src="icons/share.svg" alt="share">
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="project">
+                        <h3>Bitcoin Project</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <div class="icons-container">
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" alt="star-plus">
+                                <img src="icons/eye-plus.svg" alt="eye-plus">
+                                <img src="icons/share.svg" alt="share">
+                            </div>
+                        </div>
+
+                    </div>
+
+                    
+                </div>
+               
+            </div>
+            <div class="column-2">
+
+            </div>
+        </div>
     </div>
 </body>
 </html>
