Complete announcements section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <p>Your Projects</p>
                 <div class="your-projects">
                     <div class="project">
-                        <h3>Ethereum Blockchain</h3>
+                        <h1>Ethereum Blockchain</h1>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                         <div class="icons-container">
                             <div class="icons">
@@ -76,7 +76,46 @@
 
                     </div>
                     <div class="project">
-                        <h3>Blockchain Project</h3>
+                        <h1>Blockchain Project</h1>
+                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, </p>
+                        <div class="icons-container">
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" alt="star-plus">
+                                <img src="icons/eye-plus.svg" alt="eye-plus">
+                                <img src="icons/share.svg" alt="share">
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="project">
+                        <h1>Cryptocurrency</h1>
+                        <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham </p>
+                        <div class="icons-container">
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" alt="star-plus">
+                                <img src="icons/eye-plus.svg" alt="eye-plus">
+                                <img src="icons/share.svg" alt="share">
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="project">
+                        <h1>Non Fungible Token(NFTs)</h1>
+                        <p>industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <div class="icons-container">
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" alt="star-plus">
+                                <img src="icons/eye-plus.svg" alt="eye-plus">
+                                <img src="icons/share.svg" alt="share">
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="project">
+                        <h1>Crypto Platform</h1>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                         <div class="icons-container">
                             <div class="icons">
@@ -89,47 +128,8 @@
                     </div>
 
                     <div class="project">
-                        <h3>Cryptocurrency</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                        <div class="icons-container">
-                            <div class="icons">
-                                <img src="icons/star-plus.svg" alt="star-plus">
-                                <img src="icons/eye-plus.svg" alt="eye-plus">
-                                <img src="icons/share.svg" alt="share">
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="project">
-                        <h3>Non Fungible Token(NFTs)</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                        <div class="icons-container">
-                            <div class="icons">
-                                <img src="icons/star-plus.svg" alt="star-plus">
-                                <img src="icons/eye-plus.svg" alt="eye-plus">
-                                <img src="icons/share.svg" alt="share">
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="project">
-                        <h3>Crypto Platform</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                        <div class="icons-container">
-                            <div class="icons">
-                                <img src="icons/star-plus.svg" alt="star-plus">
-                                <img src="icons/eye-plus.svg" alt="eye-plus">
-                                <img src="icons/share.svg" alt="share">
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="project">
-                        <h3>Bitcoin Project</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <h1>Bitcoin Project</h1>
+                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
                         <div class="icons-container">
                             <div class="icons">
                                 <img src="icons/star-plus.svg" alt="star-plus">
@@ -145,7 +145,28 @@
                
             </div>
             <div class="column-2">
-
+                <div id="row-1">
+                    <p>Announcements</p>
+                    <div class="announcements">
+                        <div class="announcements-child">
+                            <h2>Site Maintenance</h2>
+                            <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime </p>
+                        </div>
+                        <div class="announcements-child">
+                            <h2>Community Share Day</h2>
+                            <p>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus </p>
+                        </div>
+                        <div class="announcements-child">
+                            <h2>Updated Privacy Policy</h2>
+                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum </p>
+                        </div>
+                    </div>
+                    
+                </div>
+                <div id="row-2">
+                    <p>Trending</p>
+                    <div class="trending"></div>
+                </div>
             </div>
         </div>
     </div>
