Complete Trending section layout and style

--- a/index.html
+++ b/index.html
@@ -165,7 +165,37 @@
                 </div>
                 <div id="row-2">
                     <p>Trending</p>
-                    <div class="trending"></div>
+                    <div class="trending">
+                        <div class="trend">
+                            <div class="circle-image"></div>
+                            <div class="trend-text">
+                                <h1>@tegan</h1>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div class="trend">
+                            <div class="circle-image"></div>
+                            <div class="trend-text">
+                                <h1>@morgan</h1>
+                                <p>Ethereum Blockchain</p>
+                            </div>
+                        </div>
+                        <div class="trend">
+                            <div class="circle-image"></div>
+                            <div class="trend-text">
+                                <h1>@kendall</h1>
+                                <p>Life Changing App</p>
+                            </div>
+                        </div>
+                        <div class="trend">
+                            <div class="circle-image"></div>
+                            <div class="trend-text">
+                                <h1>@alex</h1>
+                                <p>No traffic maker</p>
+                            </div>
+                        </div>
+                        
+                    </div>
                 </div>
             </div>
         </div>
