--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/4ab498ab44.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -194,11 +195,14 @@
                                 <p>No traffic maker</p>
                             </div>
                         </div>
-                        
                     </div>
                 </div>
             </div>
         </div>
+        <div class="footer">
+            <p>Made with <span class="red-heart">&#x2764;</span> by <a id="odilsonjs" href="https://github.com/odilsonjs" target="_blank">odilsonjs</a>   <a href="https://github.com/odilsonjs/admin-dashboard" target="_blank"><i id="github-icon" class="fa-brands fa-github"></i></a></p>
+        </div>
     </div>
+    
 </body>
 </html>
