Add @ to username

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </div>
         </div>
         <div class="footer">
-            <p>Made with <span class="red-heart">&#x2764;</span> by <a id="odilsonjs" href="https://github.com/odilsonjs" target="_blank">odilsonjs</a>   <a href="https://github.com/odilsonjs/admin-dashboard" target="_blank"><i id="github-icon" class="fa-brands fa-github"></i></a></p>
+            <p>Made with <span class="red-heart">&#x2764;</span> by <a id="odilsonjs" href="https://github.com/odilsonjs" target="_blank">@odilsonjs</a>   <a href="https://github.com/odilsonjs/admin-dashboard" target="_blank"><i id="github-icon" class="fa-brands fa-github"></i></a></p>
         </div>
     </div>
     
